implement rentable_by filter for node to return nodes already rented by a twin id or nodes available to rent.
