# grid-proxy/docs/swagger.json
@@ -1005,6 +1005,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "rented by a twin id or available to rent",
+                        "name": "rentable_by",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "List of farms separated by comma to fetch nodes from (e.g. '1,2,3')",
                         "name": "farm_ids",
@@ -1610,6 +1616,9 @@
                     "items": {
                         "$ref": "#/definitions/types.Processor"
                     }
+                },
+                "updatedAt": {
+                    "type": "integer"
                 }
             }
         },
@@ -1705,6 +1714,12 @@
                 },
                 "farmingPolicyId": {
                     "type": "integer"
+                },
+                "gpus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.NodeGPU"
+                    }
                 },
                 "gridVersion": {
                     "type": "integer"
@@ -1895,6 +1910,12 @@
                 "farmingPolicyId": {
                     "type": "integer"
                 },
+                "gpus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.NodeGPU"
+                    }
+                },
                 "gridVersion": {
                     "type": "integer"
                 },
@@ -2017,6 +2038,9 @@
                     "type": "number"
                 },
                 "node_twin_id": {
+                    "type": "integer"
+                },
+                "updatedAt": {
                     "type": "integer"
                 },
                 "upload": {
